--- a/firebase.json
+++ b/firebase.json
@@ -22,12 +22,23 @@
       }
     }
   },
-  "hosting": {
-    "public": "build/web",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ]
+    "hosting": {
+      "public": "build/web",
+      "ignore": [
+        "firebase.json",
+        "**/.*",
+        "**/node_modules/**"
+      ],
+      "rewrites": [
+        {
+          "source": "/admin",
+          "destination": "/index.html"
+        },
+        {
+          "source": "/**",
+          "destination": "/index.html"
+        }
+      ]
+    }
   }
-}
+  
