--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_map: ^7.0.2
   emoji_picker_flutter: ^4.3.0
   url_launcher: ^6.2.4
+  firebase_auth: ^5.5.2
 
 
 dev_dependencies:
